typescript/checker/tests/errors/copied/union-type-with-index-signature-3/index.ts
type Missing = { foo: number, bar: true } | { [s: string]: string } | { foo: boolean }
declare var m: Missing
m.foo = 'hi'
m.bar